--- a/assessment.html
+++ b/assessment.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="twitter:card" content="summary" />
     <meta property="og:url" content="https://tokotokko.github.io/assessment/assessment.html" />
-    <meta property="og:title" content="あなたのいいところ診断" />
+    <meta property="og:title" content="tokotokkoが作ったあなたのいいところ診断" />
     <meta property="og:description" content="N予備校プログラミング入門コースで作成した。「あなたのいいところ診断」サイトです。" />
     <title>あなたの良いところ診断</title>
     <link rel="stylesheet" href="assessment.css">
